--- a/.github/workflows/CD-CI-Pipeline.yml
+++ b/.github/workflows/CD-CI-Pipeline.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
+    # Шаг для создания файла .env
     - name: Create .env file
       run: |
         echo DEBUG=${{ secrets.DEBUG }} >> .env
@@ -25,5 +26,6 @@ jobs:
         echo DB_HOST=${{ secrets.DB_HOST }} >> .env
         echo DB_PORT=${{ secrets.DB_PORT }} >> .env
 
+    # Запуск docker-compose
     - name: Build and run Docker containers
       run: docker-compose up --build -d
