--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,53 +80,27 @@ jobs:
       - name: Push Docker Image
         run: |
           docker push saikal123/ort:develop-finish
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [test, build]  
-
-  #   steps:
-  #     # Step 1: Checkout the code
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v3
-
-  #     # Step 2: Set up SSH private key
-  #     - name: Set up SSH private key
-  #       run: |
-  #         mkdir -p ~/.ssh
-  #         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa  # Add the SSH private key
-  #         chmod 600 ~/.ssh/id_rsa  # Set secure permissions
-  #         ssh-keyscan -H $SERVER_IP >> ~/.ssh/known_hosts  # Add the server to known hosts
-  #         sudo apt-get install sshpass  # Install sshpass to handle password authentication
-  #         echo "$SSH_PASSWORD" | sshpass ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@$SERVER_IP 'exit'  # Use password to authenticate
-  #       env:
-  #         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         SERVER_IP: ${{ secrets.SERVER_IP }}
-  #         SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
-          
-  #     # Step 3: Grant execute permissions to the deploy script
-  #     - name: Grant execute permissions to deploy.sh
-  #       run: chmod +x deploy.sh
-
-  #     # Step 4: Deploy Docker container using deploy.sh script
-  #     - name: Deploy Docker container
-  #       run: |
-  #         ./deploy.sh
-  #       env:
-  #         SERVER_USER: ${{ secrets.SERVER_USER }}
-  #         SERVER_IP: ${{ secrets.SERVER_IP }}
-  #         DOCKER_IMAGE: saikal123/optics:develop  # Replace with your Docker image name
-  #         DB_NAME: ${{ secrets.DB_NAME }}
-  #         DB_USER: ${{ secrets.DB_USER }}
-  #         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-  #         DB_HOST: ${{ secrets.DB_HOST }}
-  #         DB_PORT: ${{ secrets.DB_PORT }}
-  #         SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  #         SERVER_PASSWORD: ${{ secrets.SERVER_PASSWORD }}
-
-          
-
-
-
-
-
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Login to Remote Server
+        env:
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_PASSWORD: ${{ secrets.REMOTE_PASSWORD }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        run: |
+          sshpass -p "$REMOTE_PASSWORD" ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST << EOF
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            docker pull saikal123/ort:develop-finish
+            docker stop ort-app || true
+            docker rm ort-app || true
+            docker run -d --name ort-app \
+              -e DB_NAME=${{ secrets.DB_NAME }} \
+              -e DB_USER=${{ secrets.DB_USER }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e DB_HOST=${{ secrets.DB_HOST }} \
+              -e DB_PORT=${{ secrets.DB_PORT }} \
+              -e SECRET_KEY=${{ secrets.SECRET_KEY }} \
+              -p 8000:8000 saikal123/ort:develop-finish
+          EOF
