--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: StudyPlatform
     ports:
-      - "8080:8000"
+      - "8081:8000"
     depends_on:
       - study_platform_postgres_db
     env_file:
@@ -18,7 +18,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
     command: >
-      sh -c "./wait-for-it.sh optics_postgres_db:5432 -- 
+      sh -c "./wait-for-it.sh study_platform_postgres_db:5432 -- 
             python manage.py makemigrations --noinput &&
             python manage.py migrate --noinput &&
             python manage.py collectstatic --noinput &&
@@ -36,7 +36,7 @@ services:
     depends_on:
       - django
     ports:
-      - "80:80"
+      - "82:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./staticfiles:/code/staticfiles
@@ -55,7 +55,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     
     ports:
-      - "5433:5432"
+      - "5434:5432"
     networks:
       - study_platform_network
     volumes:
