--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,43 +5,50 @@ services:
     build: .
     container_name: StudyPlatform
     ports:
-      - "8081:8000"
+      - "8000:8000"
     depends_on:
       - study_platform_postgres_db
     env_file:
       - .env
     environment:
-      - DEBUG=${DEBUG} 
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
+      DEBUG: ${DEBUG}
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
     command: >
-      sh -c "./wait-for-it.sh study_platform_postgres_db:5432 -- 
-            python manage.py makemigrations --noinput &&
-            python manage.py migrate --noinput &&
-            python manage.py collectstatic --noinput &&
-            gunicorn config.wsgi:application --bind 0.0.0.0:8000"
+      sh -c "./wait-for-it.sh study_platform_postgres_db:5432 --
+              python manage.py makemigrations --noinput &&
+              python manage.py migrate --noinput &&
+              python manage.py collectstatic --noinput &&
+              gunicorn config.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/code
-      - ./staticfiles:/app/staticfiles
-      - ./staticfiles:/code/staticfiles
+      - ./staticfiles:/app/staticfiles  # Может быть лишним
+#      - ./staticfiles:/app/staticfiles  # Статические файлы
+#      - ./media:/app/media  # Медиа файлы
     networks:
       - study_platform_network
 
-  nginx:
-    image: nginx:1.26.2
-    container_name: study_platform_nginx
-    depends_on:
-      - django
-    ports:
-      - "82:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./staticfiles:/code/staticfiles
-    networks:
-      - study_platform_network
+#  nginx:
+#    image: nginx:1.26.2
+#    container_name: study_platform_nginx
+#    depends_on:
+#      - django
+#    ports:
+#      - "80:80"
+#      - "443:443"  # Порт для HTTPS
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro  # read-only
+##      - ./nginx/ssl:/etc/letsencrypt/live/api.recordonline.kg:ro  # read-only
+#      - ./nginx/ssl:/code/nginx/ssl
+##      - ./nginx/ssl_for_frontend:/code/nginx/ssl_for_frontend
+#      - ./staticfiles:/app/staticfiles:ro
+##     - ./staticfiles:/app/staticfiles:ro  # Статические файлы, только для чтения
+#      - ./media:/app/media:ro  # Медиа файлы, только для чтения
+#    networks:
+#      - study_platform_network
 
   study_platform_postgres_db:
     image: postgres:16.6-alpine
@@ -53,14 +60,12 @@ services:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-    
     ports:
-      - "5434:5432"
-    networks:
-      - study_platform_network
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
+    networks:
+      - study_platform_network
 
 networks:
   study_platform_network:
